--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/lets-do-it.png" />
  
-    <title>|Tarefas</title>
+    <title>Tarefas</title>
   </head>
   <body>
     <noscript>necessario ativar Javascript para uso deste App.</noscript>
