--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,5 @@
     <div id="root"></div>
    
   </body>
-
+  <iframe title="Consulta_Lojas_TI" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiNTI1NWIzYTEtNmE2Yi00OGM1LWI5NWItMDQ2NDZlNmExZWE1IiwidCI6ImFiODBjOTNmLTgwYmEtNDVhNC04MTIwLWEwOTYwNWU4ZjgwMCJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
 </html>
